--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,8 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<ul>
-  <li *ngFor = "let nome of nomes">
-    {{nome}}
+<ul *ngFor = "let nome of nomes, let i = index">
+  <li>
+    nome da pessoa é: {{nome}}, está na posição {{i + 1}}
   </li>
 </ul>
