--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,3 +14,5 @@
 </ul>
 <p *ngIf = "nomes.lenght == 0"> Nenhum nome encontrado, usando *ngIF</p>
 <p [hidden] = "nomes.lenght > 0" > Nenhum nome encontrado, usando hidden</p>
+
+<input #box placeholder="digite um nome" (keyup) = "buscar(box.value)"/>
