--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,12 +7,10 @@
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-<ul *ngFor = "let nome of nomes, let i = index">
+<ul *ngFor = "let nomeFiltro of nomesFiltro">
   <li>
-    nome da pessoa é: {{nome}}, está na posição {{i + 1}}
+    {{nomeFiltro}}
   </li>
 </ul>
 <p *ngIf = "nomes.lenght == 0"> Nenhum nome encontrado, usando *ngIF</p>
 <p [hidden] = "nomes.lenght > 0" > Nenhum nome encontrado, usando hidden</p>
-
-<input #box placeholder="digite um nome" (keyup) = "buscar(box.value)"/>
