--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,11 +6,16 @@
 <!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
 <!-- * * * * * * * to get started with your project! * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
+<ul *ngFor = "let nome of nomes, let i = index">
+  <li>
+    nome da pessoa é: {{nome}}, está na posição {{i + 1}}
+  </li>
+</ul>
+<p *ngIf = "nomes.lenght == 0"> Nenhum nome encontrado, usando *ngIF</p>
+<p [hidden] = "nomes.lenght > 0" > Nenhum nome encontrado, usando hidden</p>
+<input #box placeholder="digite um nome" (keyup) = "buscar(box.value)"/>
 <ul *ngFor = "let nomeFiltro of nomesFiltro">
   <li>
     {{nomeFiltro}}
   </li>
 </ul>
-<p *ngIf = "nomes.lenght == 0"> Nenhum nome encontrado, usando *ngIF</p>
-<p [hidden] = "nomes.lenght > 0" > Nenhum nome encontrado, usando hidden</p>
