--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,3 @@
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content below * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * Delete the template below * * * * * * * * * * -->
-<!-- * * * * * * * to get started with your project! * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 <ul *ngFor = "let nome of nomes, let i = index">
   <li>
     nome da pessoa é: {{nome}}, está na posição {{i + 1}}
@@ -29,3 +21,9 @@
 <p> {{verificaSalario(500)?'Todo mundo ganha mais que 500':
                            ' nem todo mundo ganha mais que 500'}}
 </p>
+<br>
+<input #criterio placeholder="digite um criterio de busca"
+(keyup)="resposta = buscaCampos(criterio.value)"/>
+<ul *ngFor="let r of resposta">
+  <li>{{r.id}} - {{r.nome}} - {{r.salario}}</li>
+</ul>
